--- a/pokemon/pokemon/Classes/Views/Cells/PokemonDetailsCellTableViewCell.xib
+++ b/pokemon/pokemon/Classes/Views/Cells/PokemonDetailsCellTableViewCell.xib
@@ -63,6 +63,7 @@
                                                 <nil key="highlightedColor"/>
                                             </label>
                                         </subviews>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     </stackView>
                                 </subviews>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
