--- a/pokemon/pokemon/Classes/Views/PokemonDetailsBottomView.xib
+++ b/pokemon/pokemon/Classes/Views/PokemonDetailsBottomView.xib
@@ -15,6 +15,8 @@
                 <outlet property="pokemonImageView" destination="Gkb-iF-DN6" id="VpO-Pv-nHf"/>
                 <outlet property="pokemonNameLabel" destination="aoE-Zc-qGX" id="Lsa-6v-fC8"/>
                 <outlet property="pokemonView" destination="Moy-6X-PTI" id="izB-zq-Tij"/>
+                <outlet property="swipeLeftImageView" destination="EFx-Sj-KIC" id="jPT-YM-ArF"/>
+                <outlet property="swipeRightImageView" destination="28W-iu-hMW" id="iyj-e2-uyh"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
